Cards Flexbox with reference Align items center sample

--- a/pages/PhotoGallery.html
+++ b/pages/PhotoGallery.html
@@ -7,15 +7,15 @@
     </head>
     <body>
         <div>
-            <img src="../assets/Rose.png" alt="Sample photo">
-            <img src="../assets/Flower1.jpg" alt="Sample photo" title="img1">            
-            <img src="../assets/Flower2.png" alt="Sample photo">
-            <img src="../assets/Jasmine.jpg" alt="Sample photo">
-            <img src="../assets/Hibiscus.jpg" alt="Sample photo">
-            <img src="../assets/Lotus.webp" alt="Sample photo">
-            <img src="../assets/SunFlower.jpg" alt="Sample photo">
-            <img src="../assets/ForgetMeNot.jpg" alt="Sample photo">
-            <img src="../assets/tulips.webp" alt="Sample photo">
+            <img src="../assets/Rose.png" alt="Rose" title="Rose">
+            <img src="../assets/AutumnCrocus.jpg" alt="AutumnCrocus" title="AutumnCrocus">            
+            <img src="../assets/PassionFlower.png" alt="PassionFlower" title="PassionFlower">
+            <img src="../assets/Jasmine.jpg" alt="Jasmine" title="Jasmine">
+            <img src="../assets/Hibiscus.jpg" alt="Hibiscus" title="Hibiscus">
+            <img src="../assets/Lotus.webp" alt="Lotus" title="Lotus">
+            <img src="../assets/SunFlower.jpg" alt="SunFlower" title="Sun Flower">
+            <img src="../assets/ForgetMeNot.jpg" alt="ForgetMeNot" title="Forget Me Not">
+            <img src="../assets/tulips.webp" alt="Tulips" title="Tuplis">
         </div>
     </body>
 </html>
